--- a/Algoritm/packages.config
+++ b/Algoritm/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BarCode" version="4.0.2.2" targetFramework="net452" />
+  <package id="DhcpServerApi" version="0.3.0.0" targetFramework="net452" />
   <package id="DocumentFormat.OpenXml" version="2.9.1" targetFramework="net452" />
+  <package id="SimpleImpersonation" version="3.0.0" targetFramework="net452" />
   <package id="Vintasoft.Barcode" version="12.0.5.1" targetFramework="net452" />
   <package id="Vintasoft.Barcode.Web.Services" version="12.0.5.1" targetFramework="net452" />
   <package id="Vintasoft.Barcode.Web.WcfServices" version="12.0.5.1" targetFramework="net452" />
