--- a/LibaryAIS3Windows/packages.config
+++ b/LibaryAIS3Windows/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="AutoItX.Dotnet" version="3.3.14.5" targetFramework="net452" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net452" />
+  <package id="UIAComWrapper" version="1.1.0.14" targetFramework="net452" />
 </packages>
