--- a/LibaryCommandPublic/LibaryCommandPublic.csproj
+++ b/LibaryCommandPublic/LibaryCommandPublic.csproj
@@ -73,8 +73,10 @@
     <Compile Include="TestAutoit\Reg\Status\StatusReg.cs" />
     <Compile Include="TestAutoit\Reg\TechinicalUpdate\TchinicalUpdate.cs" />
     <Compile Include="TestAutoit\Reg\TreatmentFPD\Zemly\Zemly.cs" />
+    <Compile Include="TestAutoit\Reg\VisualBank\VisualBankMessages.cs" />
     <Compile Include="TestAutoit\Reg\VisualTreatmentFace\VisualTreatmentFace.cs" />
     <Compile Include="TestAutoit\Reg\YtochnenieSved\AutoCommand\YtochnenieSved.cs" />
+    <Compile Include="TestAutoit\Uregulirovanie\DebtRelief\DeptRelief.cs" />
     <Compile Include="TestAutoit\Uregulirovanie\MessageLk\AutoMessageLk.cs" />
   </ItemGroup>
   <ItemGroup>
