--- a/ViewModelLib/packages.config
+++ b/ViewModelLib/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="2.0.2" targetFramework="net452" />
   <package id="FreeSpire.Doc" version="6.3" targetFramework="net452" />
+  <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net452" />
   <package id="PdfiumViewer" version="2.10.0.0" targetFramework="net452" />
   <package id="Spire.PDF" version="4.11.8" targetFramework="net452" />
 </packages>
