--- a/LibaryAIS3Windows.Tests/packages.config
+++ b/LibaryAIS3Windows.Tests/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoItX.Dotnet" version="3.3.14.5" targetFramework="net452" />
   <package id="UIAComWrapper" version="1.1.0.14" targetFramework="net452" />
 </packages>
