--- a/LibaryCommandPublic/packages.config
+++ b/LibaryCommandPublic/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ClosedXML" version="0.94.2" targetFramework="net452" />
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net452" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net452" />
+  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net452" />
+  <package id="FastMember" version="1.3.0" targetFramework="net452" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net452" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net452" />
   <package id="Prism.Core" version="7.2.0.1422" targetFramework="net452" />
