--- a/LibaryAIS3Windows/LibaryAIS3Windows.csproj
+++ b/LibaryAIS3Windows/LibaryAIS3Windows.csproj
@@ -70,6 +70,8 @@
     <Compile Include="AutomationsUI\Otdels\Registration\RegistrationElementName.cs" />
     <Compile Include="AutomationsUI\Otdels\Uregulirovanie\UregulirovanieElementName.cs" />
     <Compile Include="AutomationsUI\PublicElement\PublicElementName.cs" />
+    <Compile Include="ButtonFullFunction\Okp2Function\Okp2GlobalFunction.cs" />
+    <Compile Include="ButtonFullFunction\PublicGlobalFunction\PublicGlobalFunction.cs" />
     <Compile Include="ButtonsClikcs\ButtonConstant.cs" />
     <Compile Include="ButtonsClikcs\ClikcCheker\Cheker.cs" />
     <Compile Include="ButtonsClikcs\KclicerButton.cs" />
@@ -114,6 +116,10 @@
     <Compile Include="Window\Windows.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\EfDatabaseAutomation\EfDatabaseAutomation.csproj">
+      <Project>{fdad249d-cd7d-4581-b945-90d2f9dad698}</Project>
+      <Name>EfDatabaseAutomation</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LibaryXMLAuto\LibaryXMLAuto.csproj">
       <Project>{a2bc3ae2-4a61-4e9e-9fa4-96a02677c79c}</Project>
       <Name>LibaryXMLAuto</Name>
