Создан новый сервис под Автоматы для статистики

--- a/AutomatAis3Full/Config/App.config
+++ b/AutomatAis3Full/Config/App.config
@@ -32,6 +32,7 @@
     <add key="PathPdfTemp" value="C:/Users/7751-00-450/AppData/Local/Temp/" /><!--Путь к PDF файлам!!!-->
     <add key="PathPdfWork" value="PdfReport/" /><!--Путь к PDF файлам!!!-->
     <add key="ExeptionsIfns" value="" /><!--ИНН для исключения-->
+    <add key="WebSite" value="http://i7751-app127:8095/"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
